[gd_scene format=4 uid="uid://cayubxhm8opbx"]

[ext_resource type="Script" uid="uid://d34dijfc06ckt" path="res://scripts/cutscene_scripts/floor_1_intro.gd" id="1_biu1p"]
[ext_resource type="Texture2D" uid="uid://cfe3rt3e44k15" path="res://assets/tilesets/CaveEntrance.png" id="2_pv2af"]
[ext_resource type="Texture2D" uid="uid://be0vpnhnidkv5" path="res://assets/tilesets/Grass.png" id="3_sb7hy"]
[ext_resource type="Texture2D" uid="uid://d1pjmyex4yl25" path="res://assets/tilesets/walls.png" id="4_dahqs"]
[ext_resource type="Texture2D" uid="uid://c0bkq0ijbi2ry" path="res://assets/characters/HERO.png" id="5_sb7hy"]
[ext_resource type="PackedScene" uid="uid://bdpnxnlxq2qir" path="res://scenes/ui/DialogueSystem.tscn" id="6_sb7hy"]

[sub_resource type="Animation" id="Animation_b1oxu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Npc1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 176)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Npc1:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_yba2x"]
resource_name = "intro"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Npc1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.99),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 176), Vector2(0, 64), Vector2(0, 0), Vector2(0, -64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [12],
"method": &"pause_for_dialogue"
}, {
"args": [1],
"method": &"pause_for_dialogue"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Npc1:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8000001, 1, 1.2, 1.4000001, 1.6, 1.8000001, 2, 2.2, 2.4, 2.6000001, 2.8000002, 3.0000002),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 18, 19, 20, 21, 18, 19, 20, 21, 18, 19, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_efow8"]
_data = {
&"RESET": SubResource("Animation_b1oxu"),
&"intro": SubResource("Animation_yba2x")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w345l"]
texture = ExtResource("2_pv2af")
5:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qge44"]
texture = ExtResource("3_sb7hy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ciobt"]
texture = ExtResource("4_dahqs")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
17:27/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
16:30/0 = 0
17:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
16:31/0 = 0
17:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
14:33/0 = 0
15:33/0 = 0
16:33/0 = 0
17:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
12:34/0 = 0
13:34/0 = 0
14:34/0 = 0
15:34/0 = 0
16:34/0 = 0
17:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
12:35/0 = 0
13:35/0 = 0
14:35/0 = 0
15:35/0 = 0
16:35/0 = 0
17:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
12:36/0 = 0
13:36/0 = 0
14:36/0 = 0
15:36/0 = 0
16:36/0 = 0
17:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
9:37/0 = 0
10:37/0 = 0
11:37/0 = 0
12:37/0 = 0
13:37/0 = 0
14:37/0 = 0
15:37/0 = 0
16:37/0 = 0
17:37/0 = 0
0:40/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
8:40/0 = 0
9:40/0 = 0
10:40/0 = 0
11:40/0 = 0
12:40/0 = 0
13:40/0 = 0
14:40/0 = 0
15:40/0 = 0
16:40/0 = 0
17:40/0 = 0
0:41/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
9:41/0 = 0
10:41/0 = 0
11:41/0 = 0
12:41/0 = 0
13:41/0 = 0
14:41/0 = 0
15:41/0 = 0
16:41/0 = 0
17:41/0 = 0
0:42/0 = 0
1:42/0 = 0
2:42/0 = 0
3:42/0 = 0
4:42/0 = 0
5:42/0 = 0
6:42/0 = 0
7:42/0 = 0
8:42/0 = 0
9:42/0 = 0
10:42/0 = 0
11:42/0 = 0
12:42/0 = 0
13:42/0 = 0
14:42/0 = 0
15:42/0 = 0
16:42/0 = 0
17:42/0 = 0
0:43/0 = 0
1:43/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
6:43/0 = 0
7:43/0 = 0
8:43/0 = 0
9:43/0 = 0
10:43/0 = 0
11:43/0 = 0
12:43/0 = 0
13:43/0 = 0
14:43/0 = 0
15:43/0 = 0
16:43/0 = 0
17:43/0 = 0
0:44/0 = 0
1:44/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
6:44/0 = 0
7:44/0 = 0
8:44/0 = 0
9:44/0 = 0
10:44/0 = 0
11:44/0 = 0
12:44/0 = 0
13:44/0 = 0
14:44/0 = 0
15:44/0 = 0
16:44/0 = 0
17:44/0 = 0
0:45/0 = 0
1:45/0 = 0
2:45/0 = 0
3:45/0 = 0
4:45/0 = 0
5:45/0 = 0
6:45/0 = 0
7:45/0 = 0
8:45/0 = 0
9:45/0 = 0
10:45/0 = 0
11:45/0 = 0
12:45/0 = 0
13:45/0 = 0
14:45/0 = 0
15:45/0 = 0
16:45/0 = 0
17:45/0 = 0
0:46/0 = 0
1:46/0 = 0
2:46/0 = 0
3:46/0 = 0
4:46/0 = 0
5:46/0 = 0
6:46/0 = 0
7:46/0 = 0
8:46/0 = 0
9:46/0 = 0
10:46/0 = 0
11:46/0 = 0
12:46/0 = 0
13:46/0 = 0
14:46/0 = 0
15:46/0 = 0
16:46/0 = 0
17:46/0 = 0
0:47/0 = 0
1:47/0 = 0
2:47/0 = 0
3:47/0 = 0
4:47/0 = 0
5:47/0 = 0
6:47/0 = 0
7:47/0 = 0
8:47/0 = 0
9:47/0 = 0
10:47/0 = 0
11:47/0 = 0
12:47/0 = 0
13:47/0 = 0
14:47/0 = 0
15:47/0 = 0
16:47/0 = 0
17:47/0 = 0

[sub_resource type="TileSet" id="TileSet_rwk01"]
sources/0 = SubResource("TileSetAtlasSource_w345l")
sources/1 = SubResource("TileSetAtlasSource_qge44")
sources/2 = SubResource("TileSetAtlasSource_ciobt")

[node name="Floor1Intro" type="Node" unique_id=951188319]
script = ExtResource("1_biu1p")

[node name="Camera2D" type="Camera2D" parent="." unique_id=695852598]
enabled = false
zoom = Vector2(2, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=282075210]
libraries/ = SubResource("AnimationLibrary_efow8")

[node name="Floor" type="TileMapLayer" parent="." unique_id=746291039]
texture_filter = 1
position = Vector2(0, 104)
tile_map_data = PackedByteArray("AAD+//H/AQAIAAQAAAD+//L/AQACAAcAAAD+//P/AQALAAcAAAD///D/AAAFAAAAAAD///H/AQAMAAAAAAD///L/AQAPAAMAAAD///P/AQAFAAMAAAAAAPH/AQACAAAAAAAAAPL/AQAPAAEAAAAAAPP/AQAKAAEAAAABAPH/AQAJAAQAAAABAPL/AQAKAAMAAAABAPP/AQABAAMAAAD1//b/AQAFAAcAAAD1//f/AQAMAAYAAAD1//j/AQAMAAIAAAD1//n/AQAMAAcAAAD1//v/AQAHAAAAAAD1//3/AQAMAAEAAAD1//7/AQAMAAAAAAD2//L/AQANAAcAAAD2//X/AQAIAAQAAAD2//b/AQACAAUAAAD2//r/AQADAAMAAAD2//7/AQACAAUAAAD3//L/AQABAAEAAAD3//P/AQAJAAIAAAD3//T/AQAKAAUAAAD3//X/AQAFAAQAAAD3//v/AQAJAAAAAAD3//z/AQAHAAUAAAD3//3/AQAJAAcAAAD4//P/AQAJAAQAAAD4//T/AQAFAAMAAAD4//b/AQAAAAUAAAD4//j/AQAOAAcAAAD4//n/AQAHAAQAAAD5//L/AQANAAEAAAD5//P/AQAAAAIAAAD5//b/AQAKAAcAAAD5//f/AQAPAAYAAAD5//n/AQADAAMAAAD5//r/AQAPAAcAAAD5//7/AQALAAAAAAD6//X/AQANAAQAAAD6//j/AQAIAAUAAAD6//r/AQAFAAcAAAD6//v/AQANAAQAAAD6//z/AQAPAAUAAAD6//3/AQANAAUAAAD6//7/AQAFAAQAAAD7//L/AQAHAAIAAAD7//P/AQANAAUAAAD7//T/AQAMAAEAAAD7//j/AQALAAAAAAD7//n/AQANAAQAAAD7//r/AQADAAUAAAD7//3/AQAGAAAAAAD7//7/AQABAAYAAAD8//P/AQADAAYAAAD8//T/AQABAAYAAAD8//b/AQALAAEAAAD8//j/AQANAAcAAAD8//v/AQAGAAMAAAD8//z/AQAEAAEAAAD8//7/AQALAAQAAAD9//T/AQALAAAAAAD9//X/AQAMAAQAAAD9//j/AQAPAAUAAAD9//r/AQAPAAcAAAD9//v/AQAAAAAAAAD9//z/AQAFAAUAAAD9//3/AQAEAAQAAAD9//7/AQADAAEAAAD+//X/AQAAAAgAAAD+//f/AQAAAA8AAAD+//j/AQAAAAkAAAD+//r/AQABAAgAAAD+//7/AQAMAAUAAAD///T/AQAAAAgAAAD///X/AQAAAA8AAAD///b/AQAAAAoAAAD///r/AQABAA4AAAD///z/AQAAAAwAAAD///7/AQAPAAMAAAAAAPb/AQABAAgAAAAAAPv/AQABAAwAAAAAAPz/AQABAA4AAAAAAP3/AQABAA4AAAAAAP7/AQACAAUAAAABAPj/AQAAAAwAAAABAPn/AQABAA0AAAABAPr/AQABAAgAAAABAP3/AQAAAAsAAAACAPX/AQALAAMAAAACAPf/AQANAAMAAAACAPj/AQAAAAcAAAACAPn/AQAAAAAAAAACAP3/AQAEAAcAAAADAPL/AQABAAMAAAADAPP/AQAFAAQAAAADAPX/AQAFAAQAAAADAPb/AQAEAAMAAAADAPf/AQAGAAEAAAADAPv/AQALAAAAAAADAP3/AQAGAAUAAAAEAPL/AQALAAUAAAAEAPP/AQALAAcAAAAEAPX/AQACAAMAAAAEAPf/AQALAAQAAAAEAPj/AQAEAAYAAAAEAPr/AQAHAAcAAAAEAPz/AQAGAAcAAAAEAP7/AQACAAMAAAAFAPL/AQAPAAMAAAAFAPP/AQAEAAYAAAAFAPT/AQAFAAMAAAAFAPb/AQAJAAAAAAAFAPf/AQAAAAIAAAAFAPj/AQAKAAMAAAAFAPr/AQANAAAAAAAFAP3/AQAHAAMAAAAGAPT/AQAAAAIAAAAGAPX/AQAJAAQAAAAGAPb/AQAEAAUAAAAGAPj/AQAAAAYAAAAGAP3/AQAFAAcAAAAGAP7/AQAMAAIAAAAHAPL/AQANAAQAAAAHAPP/AQAEAAQAAAAHAPT/AQAEAAYAAAAHAPf/AQAAAAQAAAAHAP7/AQAIAAUAAAAIAPL/AQABAAEAAAAIAPT/AQABAAIAAAAIAPb/AQANAAQAAAAIAPr/AQAKAAIAAAAIAPv/AQAJAAYAAAAIAPz/AQAHAAIAAAAJAPL/AQAIAAEAAAAJAPT/AQACAAMAAAAJAPX/AQABAAIAAAAJAPf/AQAFAAEAAAAJAPj/AQAIAAAAAAAJAPr/AQAEAAEAAAAJAPz/AQAMAAIAAAAKAPP/AQAOAAcAAAAKAPX/AQAEAAQAAAAKAPf/AQAMAAIAAAAKAPn/AQAKAAIAAAAKAPr/AQACAAQAAAAKAPv/AQAMAAYAAAAKAPz/AQAOAAAAAAAKAP7/AQAHAAUAAAD1//L/AQAIAAcAAAD1//P/AQAOAAcAAAD1//T/AQACAAQAAAD1//X/AQAGAAUAAAD1//r/AQAFAAUAAAD2//T/AQABAAAAAAD2//f/AQABAAUAAAD2//n/AQAMAAUAAAD2//3/AQADAAAAAAD3//f/AQANAAUAAAD3//j/AQACAAYAAAD3//n/AQAIAAMAAAD3//r/AQAFAAEAAAD4//X/AQAGAAEAAAD4//f/AQAMAAYAAAD4//z/AQACAAMAAAD4//7/AQAPAAQAAAD5//T/AQADAAUAAAD5//j/AQANAAEAAAD6//T/AQACAAMAAAD6//b/AQALAAcAAAD6//n/AQAGAAcAAAD7//f/AQAOAAYAAAD7//z/AQADAAMAAAD8//X/AQALAAEAAAD8//f/AQAGAAIAAAD9//b/AQALAAcAAAD9//f/AQADAAcAAAD9//n/AQAEAAQAAAD+//b/AQABAAoAAAD+//3/AQAAAAgAAAD///j/AQABAA4AAAD///n/AQABAA8AAAD///v/AQAAAA4AAAD///3/AQABAAwAAAAAAPT/AQABAAkAAAAAAPX/AQAAAAoAAAAAAPf/AQAAAAgAAAAAAPn/AQABAAoAAAABAPT/AQABAAoAAAABAPb/AQABAAwAAAABAPz/AQAAAAgAAAACAPL/AQAPAAMAAAACAPT/AQAGAAIAAAACAPv/AQAGAAcAAAACAPz/AQANAAUAAAADAPj/AQAIAAcAAAADAPn/AQAFAAIAAAADAPr/AQAPAAQAAAAEAPT/AQAEAAYAAAAEAPb/AQANAAEAAAAEAPn/AQAGAAYAAAAEAP3/AQAOAAMAAAAFAPz/AQANAAIAAAAGAPn/AQANAAEAAAAGAPr/AQANAAAAAAAGAPv/AQABAAAAAAAHAPX/AQAPAAMAAAAHAPb/AQAGAAMAAAAHAPj/AQAOAAMAAAAHAPr/AQAIAAcAAAAHAP3/AQAJAAAAAAAIAPP/AQAFAAYAAAAIAPX/AQAEAAMAAAAIAPf/AQAGAAQAAAAIAPn/AQAAAAIAAAAIAP7/AQAMAAUAAAAJAPb/AQAEAAIAAAAJAPv/AQAHAAQAAAAKAPb/AQAMAAAAAAAKAP3/AQAEAAEAAAD1//z/AQAAAAUAAAD2//P/AQAAAAUAAAD2//j/AQAAAAMAAAD2//v/AQAJAAAAAAD2//z/AQABAAIAAAD3//b/AQAOAAMAAAD3//7/AQAIAAUAAAD4//L/AQALAAEAAAD4//r/AQAHAAYAAAD4//v/AQAHAAcAAAD4//3/AQALAAUAAAD5//X/AQAOAAUAAAD5//v/AQAPAAAAAAD5//z/AQAGAAcAAAD5//3/AQACAAEAAAD6//L/AQADAAIAAAD6//P/AQAIAAYAAAD6//f/AQAPAAUAAAD7//X/AQAFAAEAAAD7//b/AQADAAMAAAD7//v/AQAAAAYAAAD8//L/AQAJAAMAAAD8//n/AQAAAAUAAAD8//r/AQAMAAMAAAD8//3/AQAHAAIAAAD9//L/AQAAAAAAAAD9//P/AQAJAAUAAAD+//T/AQAAAAoAAAD+//n/AQABAA4AAAD+//v/AQAAAAkAAAD+//z/AQABAAsAAAD///f/AQAAAAsAAAAAAPj/AQABAAsAAAAAAPr/AQAAAAsAAAABAPX/AQABAA8AAAABAPf/AQAAAAwAAAABAPv/AQAAAAgAAAABAP7/AQABAAEAAAACAPP/AQAFAAYAAAACAPb/AQAJAAAAAAACAPr/AQAPAAcAAAACAP7/AQACAAMAAAADAPT/AQAIAAAAAAADAPz/AQADAAEAAAADAP7/AQAFAAcAAAAEAPv/AQAOAAYAAAAFAPX/AQAPAAcAAAAFAPn/AQABAAIAAAAFAPv/AQAMAAIAAAAFAP7/AQACAAIAAAAGAPL/AQAOAAMAAAAGAPP/AQAOAAAAAAAGAPf/AQAAAAUAAAAGAPz/AQAPAAUAAAAHAPn/AQAKAAAAAAAHAPv/AQAPAAYAAAAHAPz/AQAJAAMAAAAIAPj/AQAFAAAAAAAIAP3/AQAOAAcAAAAJAPP/AQAPAAEAAAAJAPn/AQAJAAIAAAAJAP3/AQAAAAQAAAAJAP7/AQABAAAAAAAKAPL/AQANAAIAAAAKAPT/AQANAAcAAAAKAPj/AQAOAAYAAADx//H/AQAPAAIAAADx//L/AQANAAYAAADx//P/AQADAAMAAADx//T/AQAGAAcAAADx//X/AQAAAAUAAADx//b/AQAJAAYAAADx//f/AQAAAAAAAADx//j/AQALAAIAAADx//n/AQAFAAUAAADx//r/AQAPAAEAAADx//v/AQACAAMAAADx//z/AQAGAAAAAADx//3/AQAGAAIAAADx//7/AQAJAAcAAADx////AQAIAAcAAADx/wAAAQACAAcAAADx/wEAAQAPAAIAAADy//H/AQAFAAUAAADy//L/AQANAAIAAADy//P/AQAHAAMAAADy//T/AQAKAAMAAADy//X/AQACAAUAAADy//b/AQAKAAcAAADy//f/AQAFAAAAAADy//j/AQAIAAYAAADy//n/AQACAAQAAADy//r/AQAIAAUAAADy//v/AQAKAAUAAADy//z/AQANAAEAAADy//3/AQAGAAMAAADy//7/AQAAAAcAAADy////AQAEAAMAAADy/wAAAQAPAAEAAADy/wEAAQAJAAMAAADz//H/AQAPAAAAAADz//L/AQAMAAQAAADz//P/AQAMAAIAAADz//T/AQAJAAIAAADz//X/AQAGAAcAAADz//b/AQAJAAMAAADz//f/AQABAAUAAADz//j/AQAMAAMAAADz//n/AQAFAAEAAADz//r/AQANAAAAAADz//v/AQAGAAIAAADz//z/AQADAAUAAADz//3/AQAAAAEAAADz//7/AQAKAAcAAADz////AQAJAAQAAADz/wAAAQAAAAcAAADz/wEAAQALAAUAAAD0//H/AQANAAcAAAD0//L/AQAGAAQAAAD0//P/AQAHAAQAAAD0//T/AQAEAAYAAAD0//X/AQABAAUAAAD0//b/AQAEAAMAAAD0//f/AQAPAAIAAAD0//j/AQAPAAMAAAD0//n/AQAFAAAAAAD0//r/AQAAAAYAAAD0//v/AQAAAAMAAAD0//z/AQAPAAUAAAD0//3/AQANAAUAAAD0//7/AQALAAEAAAD0////AQAEAAYAAAD0/wAAAQAAAAIAAAD0/wEAAQAPAAAAAAD1//H/AQAKAAIAAAD1////AQANAAIAAAD1/wAAAQANAAEAAAD1/wEAAQAEAAEAAAD2//H/AQAPAAAAAAD2////AQADAAMAAAD2/wAAAQAPAAYAAAD2/wEAAQAIAAIAAAD3//H/AQAOAAcAAAD3////AQAHAAMAAAD3/wAAAQALAAMAAAD3/wEAAQAPAAIAAAD4//H/AQAKAAYAAAD4////AQAMAAcAAAD4/wAAAQAAAAYAAAD4/wEAAQAFAAMAAAD5//H/AQAIAAYAAAD5////AQAGAAQAAAD5/wAAAQABAAYAAAD5/wEAAQADAAYAAAD6//H/AQAOAAcAAAD6////AQABAAAAAAD6/wAAAQAPAAAAAAD6/wEAAQALAAAAAAD7//H/AQAAAAUAAAD7////AQAKAAcAAAD7/wAAAQAJAAIAAAD7/wEAAQAEAAcAAAD8//H/AQAAAAMAAAD8////AQAFAAYAAAD8/wAAAQALAAYAAAD8/wEAAQAOAAcAAAD9//H/AQAMAAcAAAD9////AQAJAAYAAAD9/wAAAQAAAAEAAAD9/wEAAQAOAAIAAAD+////AQAEAAQAAAD+/wAAAQAHAAIAAAD+/wEAAQAOAAUAAAD/////AQABAAYAAAD//wAAAQAIAAYAAAD//wEAAQAJAAMAAAAAAP//AQAAAAcAAAAAAAAAAQAMAAEAAAAAAAEAAQAGAAAAAAABAP//AQAGAAIAAAABAAAAAQAAAAEAAAABAAEAAQAAAAcAAAACAPH/AQAFAAYAAAACAP//AQAMAAQAAAACAAAAAQAFAAYAAAACAAEAAQAJAAcAAAADAPH/AQADAAEAAAADAP//AQACAAcAAAADAAAAAQAHAAMAAAADAAEAAQAOAAUAAAAEAPH/AQACAAYAAAAEAP//AQAAAAQAAAAEAAAAAQACAAIAAAAEAAEAAQADAAEAAAAFAPH/AQABAAQAAAAFAP//AQAOAAYAAAAFAAAAAQAMAAIAAAAFAAEAAQAJAAEAAAAGAPH/AQAIAAUAAAAGAP//AQAPAAEAAAAGAAAAAQAHAAEAAAAGAAEAAQABAAUAAAAHAPH/AQANAAYAAAAHAP//AQALAAQAAAAHAAAAAQAIAAIAAAAHAAEAAQAFAAAAAAAIAPH/AQAEAAYAAAAIAP//AQALAAAAAAAIAAAAAQAFAAEAAAAIAAEAAQACAAcAAAAJAPH/AQAMAAcAAAAJAP//AQAEAAMAAAAJAAAAAQABAAUAAAAJAAEAAQAJAAUAAAAKAPH/AQAMAAIAAAAKAP//AQAAAAYAAAAKAAAAAQADAAAAAAAKAAEAAQAFAAIAAAALAPH/AQAPAAYAAAALAPL/AQABAAAAAAALAPP/AQALAAAAAAALAPT/AQAOAAEAAAALAPX/AQAIAAUAAAALAPb/AQADAAEAAAALAPf/AQACAAMAAAALAPj/AQAJAAMAAAALAPn/AQAIAAIAAAALAPr/AQAPAAEAAAALAPv/AQAKAAEAAAALAPz/AQANAAQAAAALAP3/AQACAAQAAAALAP7/AQAFAAIAAAALAP//AQAFAAQAAAALAAAAAQAHAAEAAAALAAEAAQAAAAIAAAAMAPH/AQAEAAAAAAAMAPL/AQAEAAQAAAAMAPP/AQAEAAUAAAAMAPT/AQAPAAUAAAAMAPX/AQAEAAMAAAAMAPb/AQADAAYAAAAMAPf/AQALAAAAAAAMAPj/AQAOAAQAAAAMAPn/AQAOAAEAAAAMAPr/AQAMAAIAAAAMAPv/AQABAAEAAAAMAPz/AQAJAAcAAAAMAP3/AQAEAAAAAAAMAP7/AQAHAAEAAAAMAP//AQAOAAEAAAAMAAAAAQABAAEAAAAMAAEAAQAFAAIAAAANAPH/AQADAAEAAAANAPL/AQAJAAQAAAANAPP/AQAHAAAAAAANAPT/AQADAAEAAAANAPX/AQALAAEAAAANAPb/AQAFAAcAAAANAPf/AQAGAAcAAAANAPj/AQAMAAUAAAANAPn/AQAGAAcAAAANAPr/AQAIAAIAAAANAPv/AQAAAAYAAAANAPz/AQAFAAEAAAANAP3/AQAGAAUAAAANAP7/AQAHAAcAAAANAP//AQAOAAMAAAANAAAAAQAAAAcAAAANAAEAAQAAAAUAAAAOAPH/AQAPAAIAAAAOAPL/AQAIAAcAAAAOAPP/AQAKAAMAAAAOAPT/AQADAAUAAAAOAPX/AQACAAIAAAAOAPb/AQADAAEAAAAOAPf/AQAMAAMAAAAOAPj/AQAPAAIAAAAOAPn/AQAAAAcAAAAOAPr/AQAFAAUAAAAOAPv/AQAPAAcAAAAOAPz/AQAOAAIAAAAOAP3/AQALAAMAAAAOAP7/AQAOAAAAAAAOAP//AQAHAAcAAAAOAAAAAQAAAAYAAAAOAAEAAQACAAMAAAA=")
tile_set = SubResource("TileSet_rwk01")

[node name="Prop" type="TileMapLayer" parent="." unique_id=963993680]
texture_filter = 1
position = Vector2(0, 104)
tile_map_data = PackedByteArray("AAD+//H/AAAEAAEAAAD+//L/AAAEAAIAAAD+//P/AAAEAAMAAAD///D/AAAFAAAAAAD///H/AAAFAAEAAAD///L/AAAFAAIAAAD///P/AAAFAAMAAAAAAPH/AAAGAAEAAAAAAPL/AAAGAAIAAAAAAPP/AAAGAAMAAAABAPH/AAAHAAEAAAABAPL/AAAHAAIAAAABAPP/AAAHAAMAAAA=")
tile_set = SubResource("TileSet_rwk01")

[node name="Npc1" type="Sprite2D" parent="." unique_id=367776463]
texture_filter = 1
position = Vector2(0, 176)
texture = ExtResource("5_sb7hy")
hframes = 6
vframes = 4
frame = 18

[node name="ColorRect" type="ColorRect" parent="." unique_id=891959952]
offset_left = -240.0
offset_top = -136.0
offset_right = 240.0
offset_bottom = 136.0
color = Color(0, 0, 0, 0)

[node name="DialogueSystem" parent="." unique_id=1581347346 instance=ExtResource("6_sb7hy")]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="dialogue_finished" from="DialogueSystem" to="." method="_on_dialogue_system_dialogue_finished"]
